// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseBytes > should throw if invalid HexString 1`] = `
[TypeError: InvalidBytesError: Provided value 52 is not a valid Bytes
https://tevm.sh/reference/errors]
`;

exports[`parseBytes > should throw if invalid HexString 2`] = `
[TypeError: InvalidBytesError: Provided value 0 is not a valid Bytes
https://tevm.sh/reference/errors]
`;

exports[`parseBytes > should throw if invalid HexString 3`] = `
[TypeError: InvalidBytesError: Provided value x0 is not a valid Bytes
https://tevm.sh/reference/errors]
`;

exports[`parseBytes > should throw if invalid HexString 4`] = `
[TypeError: InvalidBytesError: Provided value  is not a valid Bytes
https://tevm.sh/reference/errors]
`;

exports[`parseBytes > should throw if invalid HexString 5`] = `
[TypeError: InvalidBytesError: Provided value true is not a valid Bytes
https://tevm.sh/reference/errors]
`;

exports[`parseBytes > should throw if invalid HexString 6`] = `
[TypeError: InvalidBytesError: Provided value [object Object] is not a valid Bytes
https://tevm.sh/reference/errors]
`;

exports[`parseBytes > should throw if invalid HexString 7`] = `
[TypeError: InvalidBytesError: Provided value not a hex is not a valid Bytes
https://tevm.sh/reference/errors]
`;
